--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.defaultInterpreterPath": "/home/kun/git/mcp-client/.venv/bin/python"
+    "python.defaultInterpreterPath": ".venv/bin/python"
   }
