--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "deepseek>=1.0.0",
     "mcp>=1.6.0",
     "openai>=1.70.0",
     "python-dotenv>=1.1.0",
+    "httpx>=0.28.1",
 ]
 
 [tool.uv.workspace]
